  * completely refactored all ST projects to generate one single project as a maven multi-module project
    - rebuilt the build mechanism to account for project structure changes and to rely more on Maven
  * fixed bug in search preventing use of space separated keywords 
  * improved version number management, by reusing the same vn defined in the core ST for updating the
    previous one 

version 0.8.0
date: 10-10-2011
  * compatibility with Firefox 4.0 (changed bridgeComponent.js)
  * compatibility checked up to Firefox 9.0
  * introduction of new extension point in annotation mechanism (annotation.js and annotator.js and
    annotationComponent.js)
  * moved all images to skin/classic/1.0 and rearranged image references in all files accordingly
  * annotation.js: chkAnnotationEvent --> merged in chkAnnotation 
  * compatibility with Firefox 4.x->9.x : drag'n'drop mechanism (see bug: https://bugzilla.mozilla.org/show_bug.cgi?id=664963)

version 0.7.2
date: 20-01-2011
  * modified getSubClasses request from Cls.java for showing chosen labels instead of the class qname
  * fixed a BUG in the response packaging in the server to always reply with properly UTF-8 encoded characters
  * fixed BUG in SPARQL panel (on client, UI project) preventing language tagged property values to be shown 
    (javscript null pointer exception)
  * added a new updateRoutine (see UpdateRoutines in resources package) for specifying the ModelType of
    main-project if it is not present (that is, if the main-project comes from an earlier version of
    SemanticTurkey)
  * added support for SKOS / SKOS-XL
  * removed constraint on "at least a type (not owl:Thing) for each resource", now owl:Thing is always visible
  * added support for OWLART API ModelConfiguration
  * new support for graph view of the ontology through a new applet based on Jung graph java library 
  * improved Mac compatibility (still considered unstable)