@@ -7,7 +7,7 @@
 # keep this aligned with SVN update version
 # major revision is the SVN update, minor revision is an internal build number which
 # can be used to keep track of different version which are not submitted to SVN
-buildversion=157.1
+buildversion=158.1
 year=2011
 name=SemanticTurkey
 Name=SemanticTurkey
